# nftea-server

./: .env-example  .gitignore  404.html  Cargo.toml  README.md  index.html  landing.html  mint.html
assets/scripts/: app.js  constants.js
assets/styles/: frontpage.css  styles.css
html/: 404.html  index.html  landing.html  mint.html
html/assets/abi/: PaymentWrapper.json  mQuark.json
html/assets/scripts/: app.js  constants.js
html/assets/styles/: styles.css
src/: lib.rs  main.rs
src/api/: uri.rs
src/model/: metadata.rs
src/repository/: attributes.rs  hashtable.rs  mod.rs
