[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.56"
bincode = "1.3.0"
num_cpus = "1.12.0"
url = "0.5"
pinata-sdk = "1.0.0"
ethers = { version = "1.0.0", features = ["ws"] }
ethers-signers = "0.2"
hex = "0.4"
