[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17.0", features = ["full"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.56"
num_cpus = "1.12.0"
url = "0.5"
ethers = { version = "1.0.0", features = ["ws", "legacy"] }
bincode = "1.3.3"
ethers-signers = "1.0.2"
hex = "0.4.3"
pinata-sdk = "1.1.0"
dotenv = "0.15.0"
