[package]
name = "nftea_metadata_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4"
uuid = { version = "^0.8", features = ["v4"] }
serde = { version = "^1", features = ["derive"] }
env_logger = "0.8"
log = "^0.4"
strum_macros = "^0.24"
strum = { version = "^0.24", features = ["derive"] }
derive_more = "^0.99"
serde_json = "1.0.56"
num_cpus = "1.12.0"
url = "0.5"
ethers = { version = "1.0.0", features = ["ws", "legacy"] }
bincode = "1.3.3"
ethers-signers = "1.0.2"
hex = "0.4.3"
pinata-sdk = "1.1.0"
dotenv = "0.15.0"
ethers-core = "1.0.2"
rand = "0.8.4"
actix-cors = "0.6.4"
actix-files = "0.6.2"
mime = "0.3.16"
